# video-virality-scoring

./: .env  .huggingface.yml  Dockerfile  README.md  START_HERE.txt  config.py  demo.txt  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/pipeline/: audio_analysis.py  frame_analysis.py  frame_extract.py  scene_detect.py  scoring.py
app/utils/: logging.py
files/pipeline/: audio_analysis.py  frame_analysis.py  frame_extract.py  scene_detect.py  scoring.py
ui/: app.py  streamlit_app.py
